# odd-ebml

./: README.adoc
app/ebml-navi/: ctx.h  ebml-navi.c  lib.h  loop.h  mkv_decl.h  show_details.h
app/ebml-vint/: ebml-vint.c
inc/oddebml/: OEbmlBuilder.h  OEbmlDeclMap.h  OEbmlIndex.h  OEbmlParser.h  OEbmlSchema.h  O_EbmlIds.h  apidecl.h  error.h  oEbmlBuilder.h  oEbmlDate.h  oEbmlDecl.h  oEbmlElement.h  oEbmlFileTrav.h  oEbmlHeader.h  oEbmlId.h  oEbmlMarker.h  oEbmlSize.h  oEbmlToken.h  oEbmlTrav.h  o_EbmlType.h  oddebml.h
mk/cmake/: CMakeLists.txt  Custom.cmake  FileLists.cmake
src/_/: OEbmlSchemaMisc.c  OEbmlSchemaMisc.h  OMisc.c  OMisc.h  error.h  misc.c  misc.h  oEbmlBuilderMarker.c  oEbmlBuilderMarker.h  oEbmlElementStack.c  oEbmlElementStack.h  oEbmlMarker.c  oEbmlMarker.h  stack.h
src/oddebml/: OEbmlBuilder.c  OEbmlDeclMap.c  OEbmlIndex.c  OEbmlSchema.c  O_EbmlIds.c  error.c  oEbmlBuilder.c  oEbmlDate.c  oEbmlDecl.c  oEbmlElement.c  oEbmlFileTrav.c  oEbmlHeader.c  oEbmlId.c  oEbmlMarker.c  oEbmlParser.c  oEbmlSize.c  oEbmlToken.c  oEbmlTrav.c  o_EbmlType.c
test/oddebml/OEbmlBuilder/: OEbmlBuilder-overview.c
test/oddebml/OEbmlSchema/: iterate_ebml_schema.c
test/oddebml/oEbmlDate/: as_ebml_date.c  ebml_date_from_timestamp.c
test/oddebml/oEbmlId/: decode_ebml_id.c  ebml_id_is_valid.c  ebml_id_length.c  encode_ebml_id.c  record_ebml_id.c  scan_ebml_id.c
test/oddebml/oEbmlSize/: decode_ebml_size.c  ebml_size_is_unknown.c  ebml_size_length.c  encode_ebml_size.c  record_ebml_size.c  scan_ebml_size.c
